WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268130
365scores.com: Quirks needed to silence the resize events when putting Safari in the background (iPadOS)
https://bugs.webkit.org/show_bug.cgi?id=268130
Summary
365scores.com: Quirks needed to silence the resize events when putting Safari...
Karl Dubost
Reported
2024-01-25 17:58:24 PST
Steps to reproduce: 1. Go to
http://365scores.com/
on iPad Pro in landscape mode 2. Background Safari, and open another app 3. Put Safari on the foreground again Actual Result 365scores.com site is being reloaded with a different layout Expected Result 365scores.com should stay with the same content. This is due to the resize events being emitted when putting Safari in the background. There is already a quirk for this. 365scores.com needs to be added to this quirk.
Attachments
Add attachment
proposed patch, testcase, etc.
Karl Dubost
Comment 1
2024-01-25 17:59:13 PST
rdar://116491386
Karl Dubost
Comment 2
2024-01-25 18:06:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23281
EWS
Comment 3
2024-01-26 10:00:25 PST
Committed
273567@main
(803558a9d300): <
https://commits.webkit.org/273567@main
> Reviewed commits have been landed. Closing PR #23281 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug